--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Server Side Swift with Vapor SPM
+.swiftpm
